--- a/1_Psen2S4Ter/R/kappa.qmd
+++ b/1_Psen2S4Ter/R/kappa.qmd
@@ -1828,14 +1828,14 @@ saveRDS(kappa_k9, here("1_Psen2S4Ter/Rdata/kappa_k9.Rds"))
 saveRDS(kappa_k10, here("1_Psen2S4Ter/Rdata/kappa_k10.Rds"))
 saveRDS(kappa_k11, here("1_Psen2S4Ter/Rdata/kappa_k11.Rds"))
 saveRDS(kappa_k12, here("1_Psen2S4Ter/Rdata/kappa_k12.Rds"))
-saveRDS(res_g_k5, here("1_Psen2S4Ter/Rdata/res_g_k5"))
-saveRDS(res_g_k6, here("1_Psen2S4Ter/Rdata/res_g_k6"))
-saveRDS(res_g_k7, here("1_Psen2S4Ter/Rdata/res_g_k7"))
-saveRDS(res_g_k8, here("1_Psen2S4Ter/Rdata/res_g_k8"))
-saveRDS(res_g_k9, here("1_Psen2S4Ter/Rdata/res_g_k9"))
-saveRDS(res_g_k10, here("1_Psen2S4Ter/Rdata/res_g_k10"))
-saveRDS(res_g_k11, here("1_Psen2S4Ter/Rdata/res_g_k11"))
-saveRDS(res_g_k12, here("1_Psen2S4Ter/Rdata/res_g_k12"))
+saveRDS(res_g_k5, here("1_Psen2S4Ter/Rdata/res_g_k5.Rds"))
+saveRDS(res_g_k6, here("1_Psen2S4Ter/Rdata/res_g_k6.Rds"))
+saveRDS(res_g_k7, here("1_Psen2S4Ter/Rdata/res_g_k7.Rds"))
+saveRDS(res_g_k8, here("1_Psen2S4Ter/Rdata/res_g_k8.Rds"))
+saveRDS(res_g_k9, here("1_Psen2S4Ter/Rdata/res_g_k9.Rds"))
+saveRDS(res_g_k10, here("1_Psen2S4Ter/Rdata/res_g_k10.Rds"))
+saveRDS(res_g_k11, here("1_Psen2S4Ter/Rdata/res_g_k11.Rds"))
+saveRDS(res_g_k12, here("1_Psen2S4Ter/Rdata/res_g_k12.Rds"))
 ```
 
 # Session info
